--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -1,15 +1,2 @@
-<h1>Your lucky number is {{ number }}</h1>
-
-{{ 'localisation.messages.other.found-records'|transchoice(prularForm, {'%number%': number}) }}<br>
-<a
-        href="{{ path("language_change", {'locale':  'en_US'}) }}">
-    {{ "localisation.locale.english-us" | trans }}
-</a>
-<a
-        href="{{ path("language_change", {'locale':  'en_GB'}) }}">
-    {{ "localisation.locale.english-gb" | trans }}
-</a>
-<a
-        href="{{ path("language_change", {'locale':  'pl_PL'}) }}">
-    {{ "localisation.locale.polish-pl" | trans }}
-</a>
+{% extends "base.html.twig" %}
+{% block body %}Hello{% endblock %}
